--- a/src/frontend/src/styles/About.scss
+++ b/src/frontend/src/styles/About.scss
@@ -25,7 +25,7 @@
   }
   
   .about-content p {
-    font-size: 16px;
+    font-size: 18px;
     color: #333;
     margin-bottom: 15px;
     line-height: 1.6;
@@ -60,7 +60,7 @@
     gap: 15px;
     background: white;
     color: black;
-    border: 2px solid #000;
+    border: 4px solid #000;
     border-radius: 40px;
     padding: 10px 20px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
@@ -91,11 +91,14 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    border: 2.5px black solid;
   }
   
   .community-text {
+    padding: 4px;
     font-size: 14px;
-    line-height: 1.4;
+    line-height: 1;
+    font-weight: 400;
   }
   
  
@@ -105,18 +108,19 @@
   }
   
   .community-title {
-    font-size: 24px;
+    font-size: 26px;
     font-weight: bold;
     margin-bottom: 20px;
-    color: #FB8500;
+    color: #023047;
+    text-align: center;
   }
   
   .community-info p {
-    font-size: 16px;
+    font-size: 18px;
     margin-bottom: 15px;
     line-height: 1.6;
     font-family: Jua;
-    color: #FB8500;
+    color: #023047;
   }
   
  
