--- a/src/frontend/src/styles/RecentPostedSeller.scss
+++ b/src/frontend/src/styles/RecentPostedSeller.scss
@@ -2,25 +2,26 @@
     padding: 20px;
     border-radius: 10px;
     max-width: 1200px;
-    margin: auto;
+    margin: 4rem auto;
   }
   
   .RecentPostedSeller-title {
-    text-align: left;
+    text-align: center;
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 30px;
+    color: #FB8500;
   }
   
   .RecentPostedSeller-content {
     display: flex;
-    justify-content: space-around; /* Chia đều khoảng cách giữa các mục */
-    gap: 20px;
+    justify-content: center; /* Chia đều khoảng cách giữa các mục */
+    gap: 3rem;
   }
   
   .RecentPostedSeller-section {
     flex: 1;
-    max-width: 350px;
+    max-width: 450px;
   }
   
   .RecentPostedSeller-card {
@@ -28,36 +29,38 @@
     background-color: #FFB703;
     text-align: center;
     border-radius: 10px;
-    padding: 15px;
+    padding: 20px;
   }
   
   .RecentPostedSeller-img {
-    width: 100%;
+    width: 90%;
     height: auto;
     border-radius: 5px;
     object-fit: cover;
+    align-self: center;
     border: 2px solid black;
   }
   
   .RecentPostedSeller-title-text {
     text-align: left;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: bold;
-    margin: 10px 0;
+    margin: 5px 12px;
   }
   
   .RecentPostedSeller-price {
     text-align: left;
     color: #333;
     font-weight: bold;
-    font-size: 19px;
+    font-size: 18px;
+    margin: 5px 12px;
   }
   
   .RecentPostedSeller-status {
     text-align: left;
-    font-size: 17px;
+    font-size: 14px;
     color: #555;
-    margin-bottom: 10px;
+    margin: 5px 12px;
   }
   
   .RecentPostedSeller-button-wrapper {
@@ -77,6 +80,13 @@
     background-color: #444;
   }
   
+  .sell-all-seller-wrapper {
+    text-align: center;
+    padding-top: 2rem;
+    .a {
+      color: #444 !important;
+    }
+  }
   @media (max-width: 768px) {
     .RecentPostedSeller-content {
       flex-direction: column; /* Xếp chồng các phần khi màn hình nhỏ */
