--- a/src/frontend/src/styles/UserSidebar.scss
+++ b/src/frontend/src/styles/UserSidebar.scss
@@ -1,5 +1,5 @@
 .user-sidebar {
-    background: #ffc04d;
+    background: #FFB703;
     border-radius: 10px;
     padding: 20px;
     text-align: center;
