--- a/src/frontend/src/styles/Profile.scss
+++ b/src/frontend/src/styles/Profile.scss
@@ -6,18 +6,17 @@
   flex-direction: column;
 }
 
-.header-wrapper {
-  width: 100%;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+.category-container {
+  margin-top: 60px;
+  @media (max-width: 1024px) {
+    margin-top: 55px;
+  }
+  @media (max-width: 768px) {
+    margin-top: 50px;
+  }
 }
-
 .profile-page-container {
   flex: 1;
-  padding-top: 60px;
   width: 100%;
   display: flex; 
   gap: 20px; 
