--- a/src/frontend/src/styles/SupportPageSeller.scss
+++ b/src/frontend/src/styles/SupportPageSeller.scss
@@ -7,50 +7,48 @@
    
   }
   
-  .header-wrapper {
-    width: 100%;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    background-color: #fff; 
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+.header-wrapper {
+  width: 100%;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  background-color: #fff; 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.home-container {
+  padding-top: 60px;
+  width: 100%;
+
+  @media (max-width: 1024px) {
+    padding-top: 50px;
   }
-  
-  .home-container {
-    padding-top: 60px;
-    width: 100%;
-  
-    @media (max-width: 1024px) {
-      padding-top: 50px;
-    }
-  }
-  
-  .category-nav {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
-    overflow-x: auto;
-    -webkit-overflow-scrolling: touch;
-    gap: 2rem;
-    background-color: #023047;
-    scrollbar-width: none;
-  
-    &::-webkit-scrollbar {
-      display: none;
-    }
-  
-    .nav-item {
-      flex-shrink: 0;
-      .nav-link {
-        color: #FFB703;
-        font-weight: bold;
-        text-transform: uppercase;
-        font-size: 14px;
-        text-decoration: none;
-  
-        &:hover {
-          color: #fff;
-        }
-      }
-    }
-  }
+}
+
+
+.content-container {
+  padding: 0 60px;
+  color: black;
+  font-family: 'Jua';
+  font-weight: 400;
+  word-wrap: 'break-word';
+}
+
+.title {
+  font-size: 48px;
+  padding-top: 30px;
+}
+
+.subtitle {
+  font-size: 32px;
+  padding: 20px 0;
+}
+
+.content {
+  font-size: 20px;
+}
+
+.content-list {
+  padding-left: 10px;
+  font-size: 20px;
+}
