--- a/src/frontend/src/styles/PoliciesPageSeller.scss
+++ b/src/frontend/src/styles/PoliciesPageSeller.scss
@@ -41,7 +41,7 @@
 
 .subtitle {
   font-size: 32px;
-  padding: 20px 0;
+  padding: 30px 0 20px;
 }
 
 .content {
@@ -51,4 +51,8 @@
 .content-list {
   padding-left: 10px;
   font-size: 20px;
+  .content-list {
+    padding-left: 30px;
+    font-size: 20px;
+  }
 }
