be - update models, add seeds categories, sign up, get profile, update profile, seller upload product

--- a/src/frontend/src/styles/SellerUploadProduct.scss
+++ b/src/frontend/src/styles/SellerUploadProduct.scss
@@ -6,15 +6,6 @@
     flex-direction: column; 
   }
   
-  .header-wrapper {
-    width: 100%;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    background-color: #fff; 
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-
 .information {
     margin-top: 6%;
     margin-left: 9%;
@@ -112,65 +103,22 @@
     color: #555;
   }
 
-.name-product {
-    margin-top: 1%;
-    margin-left: 9%;
-}
-
-.name-product-head {
-    color: #023047;
-    font-weight: bold;
-    font-size: 18px;
-}
-
-.input-name {
-    border-radius: 10px;
-    background-color: #D9D9D9;
-    border: 1px black solid;
-    width: 20%;
-    word-wrap: break-word; /* Cho phép từ dài tự động xuống dòng */
-    overflow-wrap: break-word; /* Đảm bảo từ dài không tràn ra ngoài */
-}
-
-.cost {
-    margin-left: 9%;
-    margin-top: 1%;
-}
-
-.cost-head {
-    color: #023047;
-    font-weight: bold;
-    font-size: 18px;
-}
-
-.input-cost {
-    border-radius: 10px;
-    background-color: #D9D9D9;
-    border: 1px black solid;
-    width: 20%;
-}
-
-.address {
-    margin-left: 9%;
-    margin-top: 1%;
-
-}
-
-.address-head {
-    color: #023047;
-    font-weight: bold;
-    font-size: 18px;
-}
-
-.input-address{
-    border-radius: 10px;
-    background-color: #D9D9D9;
-    border: 1px black solid;
-    width: 35%;
-    height:40%;
-    word-wrap: break-word; /* Cho phép từ dài tự động xuống dòng */
-    overflow-wrap: break-word; /* Đảm bảo từ dài không tràn ra ngoài */
-}
+  .form-fields {
+    div {
+      margin: 2rem;
+      display: flex;
+      justify-content: center;
+      .input-container {
+        border-radius: 10px;
+        background-color: #D9D9D9;
+        border: 1px black solid;
+        width: 90%;
+        padding: 0.5rem;
+        word-wrap: break-word; 
+        overflow-wrap: break-word; 
+      }
+    }
+  }
 
 .category {
     margin-left: 9%;
@@ -184,7 +132,7 @@
 }
 
 .dropdown {
-    position: relative; // Đảm bảo dropdown được định vị đúng
+    position: relative;
   
     .dropdown-header {
       display: flex;
@@ -209,9 +157,9 @@
     }
   
     .dropdown-menu {
-        display: block; /* Hiển thị mặc định */
-        visibility: hidden; /* Ẩn menu mặc định */
-        opacity: 0; /* Đặt độ trong suốt */
+        display: block; 
+        visibility: hidden;
+        opacity: 0; 
         position: absolute;
         top: 100%;
         left: 0;
@@ -226,12 +174,12 @@
         box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
         max-height: 200px;
         overflow-y: auto;
-        transition: visibility 0s, opacity 0.3s ease-in-out; /* Hiệu ứng */
+        transition: visibility 0s, opacity 0.3s ease-in-out; 
     }
 
     .dropdown-menu.open {
-        visibility: visible; /* Hiển thị menu khi trạng thái mở */
-        opacity: 1; /* Hiển thị hoàn toàn */
+        visibility: visible;
+        opacity: 1;
       }
   
     .dropdown-item {
@@ -245,35 +193,6 @@
     }
   }
   
-
-.description {
-    margin-left: 9%;
-    margin-top: 1%;
-
-}
-
-.description-head {
-    color: #023047;
-    font-weight: bold;
-    font-size: 18px;
-}
-
-.input-description {
-    border-radius: 10px;
-    background-color: #D9D9D9;
-    border: 1px black solid;
-    width: 35%;
-    height: 120%;
-    padding: 5px;
-    box-sizing: border-box; /* Đảm bảo padding không làm tăng kích thước */
-    text-align: left; /* Canh trái nội dung */
-    line-height: 1.5; /* Điều chỉnh khoảng cách giữa các dòng */
-    vertical-align: top; /* Quan trọng cho textarea */
-    // resize: none; /* Ngăn người dùng thay đổi kích thước nếu cần */
-    word-wrap: break-word; /* Cho phép từ dài tự động xuống dòng */
-    overflow-wrap: break-word; /* Đảm bảo từ dài không tràn ra ngoài */
-}
-
 .button-choice {
     margin-left: 9%;
     margin-top: 6%;
