--- a/src/frontend/src/styles/Header.scss
+++ b/src/frontend/src/styles/Header.scss
@@ -133,8 +133,13 @@ $border-radius: 20px;
     }
   }
   
+.notification-dropdown { 
+  position: relative;
+}
   
-
+.chat-box { 
+  position: relative;
+}
  
   @media (max-width: 1024px) {
     height: 55px;
