--- a/src/frontend/src/styles/ProductDetail.scss
+++ b/src/frontend/src/styles/ProductDetail.scss
@@ -6,15 +6,6 @@
     flex-direction: column; 
   }
   
-  .header-wrapper {
-    width: 100%;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    background-color: #fff; 
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-
 .information {
     margin-top: 6%;
     margin-left: 9%;
@@ -37,147 +28,59 @@
 .images {
     display: flex;
     justify-content: flex-start; 
-    flex-wrap: nowrap; /* Đảm bảo không xuống dòng */
-    gap: 15px; /* Khoảng cách giữa các hình ảnh */
+    flex-wrap: nowrap; 
+    gap: 15px; 
 }
 
 .image-item {
     width: 200px;
     height: 250px;
-    box-sizing: border-box; /* Đảm bảo padding không ảnh hưởng đến width */
-    border: 1px solid #ccc; /* Thêm border nếu cần */
+    box-sizing: border-box; 
+    border: 1px solid #ccc;
     border-radius: 8px;
 }
 
 .image-item img {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Cắt hình ảnh để vừa với khung nhưng giữ đúng tỷ lệ */
+    object-fit: cover; 
 }
 
-.name-product {
-    margin-top: 1%;
+.product-detail-attributes {
+    position: relative;
+    margin-top: 2%;
     margin-left: 9%;
+
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    .product-detail-attribute {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+        .attribute-head {
+            color: #023047;
+            font-weight: bold;
+            font-size: 18px;
+        }
+    
+        .display {
+            border-radius: 10px;
+            background-color: #D9D9D9;
+            border: 1px black solid;
+            width: 90%;
+            padding: 0.5rem;
+            word-wrap: break-word; 
+            overflow-wrap: break-word; 
+        }
+    }
 }
 
-.name-product-head {
-    color: #023047;
-    font-weight: bold;
-    font-size: 18px;
-
-}
-
-.display-name {
-    border-radius: 10px;
-    background-color: #D9D9D9;
-    border: 1px black solid;
-    width: 20%;
-    white-space: pre-wrap; /* Ensure that text will wrap based on the content */
-    word-wrap: break-word; /* Allows long words to break and wrap */
-    min-height: 30px; /* Set a minimum height, it will grow if content is more */
-    padding-left: 10px;
-}
-
-.cost {
-    margin-left: 9%;
-    margin-top: 1%;
-
-}
-
-.cost-head {
-    color: #023047;
-    font-weight: bold;
-    font-size: 18px;
-}
-
-.display-cost {
-    border-radius: 10px;
-    background-color: #D9D9D9;
-    border: 1px black solid;
-    width: 20%;
-    white-space: pre-wrap; /* Ensure that text will wrap based on the content */
-    word-wrap: break-word; /* Allows long words to break and wrap */
-    min-height: 30px; /* Set a minimum height, it will grow if content is more */
-    padding-left: 10px;
-}
-
-.address {
-    margin-left: 9%;
-    margin-top: 1%;
-
-}
-
-.address-head {
-    color: #023047;
-    font-weight: bold;
-    font-size: 18px;
-}
-
-.display-address{
-    border-radius: 10px;
-    background-color: #D9D9D9;
-    border: 1px black solid;
-    width: 35%;
-    height:40%;
-    white-space: pre-wrap; /* Ensure that text will wrap based on the content */
-    word-wrap: break-word; /* Allows long words to break and wrap */
-    min-height: 30px; /* Set a minimum height, it will grow if content is more */
-    padding-left: 10px;
-}
-
-.category {
-    margin-left: 9%;
-    margin-top: 1%;
-}
-
-.category-head {
-    color: #023047;
-    font-weight: bold;
-    font-size: 18px;
-}
-
-.display-category{
-    border-radius: 10px;
-    background-color: #D9D9D9;
-    border: 1px black solid;
-    width: 35%;
-    white-space: pre-wrap; /* Ensure that text will wrap based on the content */
-    word-wrap: break-word; /* Allows long words to break and wrap */
-    min-height: 30px; /* Set a minimum height, it will grow if content is more */
-    padding-left: 10px;
-}
-
-.description {
-    margin-left: 9%;
-    margin-top: 1%;
-
-}
-
-.description-head {
-    color: #023047;
-    font-weight: bold;
-    font-size: 18px;
-}
-
-.display-description {
-    border-radius: 10px;
-    background-color: #D9D9D9;
-    border: 1px black solid;
-    width: 35%;
-    height: 120%;
-    padding: 5px;
-    white-space: pre-wrap; /* Ensure that text will wrap based on the content */
-    word-wrap: break-word; /* Allows long words to break and wrap */
-    min-height: 30px; /* Set a minimum height, it will grow if content is more */
-    padding-left: 10px;
-}
 
 .button-choice {
-    margin-left: 9%;
-    margin-top: 6%;
-    display: flex;
-    gap: 30px;
-    justify-content: flex-end; 
+    position: absolute;
+    bottom: -5rem;
+    right: 9%;
     width: 32%;
 }
   
