--- a/src/frontend/src/styles/SellerUploadProduct.scss
+++ b/src/frontend/src/styles/SellerUploadProduct.scss
@@ -106,6 +106,7 @@
   .form-fields {
     div {
       margin: 2rem;
+      margin-left: 5%;
       display: flex;
       justify-content: center;
       .input-container {
@@ -142,7 +143,7 @@
       background-color: #e0e0e0;
       border-radius: 10px;
       border: 1px black solid;
-      width: 35%;
+      width: 90%;
       cursor: pointer;
       user-select: none;
     }
@@ -164,7 +165,7 @@
         top: 100%;
         left: 0;
         z-index: 10;
-        width: 35%;
+        width: 90%;
         margin-top: 5px;
         padding: 0;
         list-style: none;
@@ -194,17 +195,14 @@
   }
   
 .button-choice {
-    margin-left: 9%;
-    margin-top: 6%;
+    margin-top: 2rem;
+    margin-left: 6rem;
     display: flex;
     gap: 30px;
-    justify-content: flex-end; 
-    width: 33%;
 }
   
 .delete-button, .upload-button {
     padding: 10px 30px;
-    margin-left: 40px;
     background-color: #FB8500;
     color: white;
     border-radius: 20px;
