--- a/src/frontend/src/styles/Notification.scss
+++ b/src/frontend/src/styles/Notification.scss
@@ -16,15 +16,21 @@
     background-color: #fff;
     max-height: 300px; 
     overflow-y: auto; 
-
+    padding-top: 50px;
   
     .notification-header {
+      position: fixed; 
+      top: 45px; 
+      height: 45px;
+      width: 350px; 
       text-align: center;
       font-weight: bold;
       padding: 10px 0;
       border-bottom: 1px solid #ddd;
       background-color: #f9f9f9;
       color: #0a2a54;
+      z-index: 1; /* Giữ header phía trên các nội dung khác */
+      // margin-bottom: 50px;
     }
   
     .notification-item {
