--- a/src/frontend/src/styles/MostSearchedItem.scss
+++ b/src/frontend/src/styles/MostSearchedItem.scss
@@ -57,7 +57,9 @@
     height: 15rem;
   }
   
-  .most-searched-title-text a {
+  .most-searched-title-text .btnMostSearch {
+    all: unset;
+    cursor: pointer;
     font-weight: bold;
     color: goldenrod;
     text-transform: uppercase;
