load reports from database

--- a/src/frontend/src/styles/HomePageAdmin.scss
+++ b/src/frontend/src/styles/HomePageAdmin.scss
@@ -51,7 +51,7 @@ section {
 
 .post-item, .reports-item {
   display: flex;
-  margin: 50px;
+  margin: 30px 0;
 }
 
 .products .post-item:hover {
@@ -77,7 +77,7 @@ section {
   padding-top: 10px;
   font-family: 'Roboto';
   font-size: 15px;
-  width: 150px;
+  width: calc(25% - 90px);
 }
 
 
@@ -119,27 +119,40 @@ section {
   border-bottom: 2px black solid;
 }
 
-.inner-header-name, .inner-report-header-name  {
+.inner-header-name   {
   text-align: center;
   width: 30%;
 }
 
-.inner-report-header-psid, .inner-report-header-prtid {
+.inner-report-header-name {
   text-align: center;
-  width: 15%;
+  width: 25%;
 }
 
-.inner-report-header-des {
+.inner-report-header-prtName, .reports-item .reported-product {
+  text-align: center;
+  width: 20%;
+  padding: 0 1rem;
+}
+
+.inner-report-header-email, .reports-item .reported-email {
+  text-align: center;
+  width: 15%;
+  padding: 0 1rem;
+}
+
+.inner-report-header-des, .description {
   text-align: center;
   width: 40%;
+  padding: 0 1rem;
 }
 
 .inner-header-product {
   width: 70%;
 }
 
-.reports-item p {
-  margin: 0 5rem;
+.reports-container {
+  padding: unset;
 }
 
 
