--- a/src/frontend/src/styles/HomePageAdmin.scss
+++ b/src/frontend/src/styles/HomePageAdmin.scss
@@ -5,8 +5,14 @@ body {
   font-family: 'Roboto';
   margin: 0;
   padding: 0;
+  min-width: 1200px; 
+  overflow-x: auto; 
 }
 
+.main-container {
+  width: 100%; 
+  display: block; 
+}
 
 .stats {
   margin-top: 100px;
