--- a/src/frontend/src/styles/Notification.scss
+++ b/src/frontend/src/styles/Notification.scss
@@ -10,6 +10,7 @@
     right: 1px; 
     top: 30px;
     width: 350px;
+    min-height: 400px;
     border: 1px solid #ddd;
     border-radius: 20px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -34,6 +35,7 @@
     }
   
     .notification-item {
+      cursor: pointer;
       padding: 10px;
       border-bottom: 1px solid #ddd;
       &:last-child {
@@ -51,6 +53,26 @@
         margin-top: 5px;
         font-size: 12px;
         color: #888;
+      }
+
+      &.unread {
+        background-color: #f9f9f9;
+        color: #000;
+      }
+    
+      &.read {
+        background-color: #e0e0e0;
+        color: #666;
+      }
+    
+      .icon-unread {
+        color: red;
+        margin-right: 8px;
+      }
+    
+      .icon-read {
+        color: green;
+        margin-right: 8px;
       }
     }
   }
