add, display statistics

--- a/src/frontend/src/styles/ListUser.scss
+++ b/src/frontend/src/styles/ListUser.scss
@@ -76,13 +76,57 @@
   width: 20%;
 }
 
-.phone-num {
+.status {
   text-align: center;
-  width: 25%;
+  width: 20%;
 }
 
 .delete {
   background-color: #fb8500;
   padding: 0 20px;
   border-radius: 20px;
+  margin-left: 20px;
+}
+
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  width: 300px;
+}
+
+/* Modal Buttons */
+.modal-buttons {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.modal-buttons button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.modal-buttons button:hover {
+  background-color: #0056b3;
 }
