--- a/src/frontend/src/styles/Help.scss
+++ b/src/frontend/src/styles/Help.scss
@@ -1,22 +1,25 @@
 .help-button-container {
-    position: relative; 
+    position: fixed; 
+    bottom: 20px; 
+    right: 20px;
     display: inline-block;
+    z-index: 1000;
   }
   
   .help-button {
     position: fixed; 
-    right: 20px; 
-    bottom: 40%; 
+    right: 18px; 
+    bottom: 10%; 
     transform: translateY(50%); 
     
-    background-color: #87CEEB;
+    background-color: #D0E9F5;
     color: white; 
-    font-size: 14px; 
+    font-size: 10px; 
     font-weight: bold;
     text-align: center; 
     
-    width: 50px; 
-    height: 50px; 
+    width: 40px; 
+    height: 40px; 
     border-radius: 50%; 
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2); 
     cursor: pointer; 
