fix css button choice

--- a/src/frontend/src/styles/SellerUploadProduct.scss
+++ b/src/frontend/src/styles/SellerUploadProduct.scss
@@ -195,7 +195,7 @@
     }
   }
   
-  .button-choice {
+  .button-choice-container {
     all: unset;
     margin-top: 2rem;
     margin-left: 24rem;
